--- a/src/main/resources/codegen.properties
+++ b/src/main/resources/codegen.properties
@@ -1,4 +1,4 @@
-#\u4ee3\u7801\u751f\u6210\u5668\u914d\u7f6e
+#\u4EE3\u7801\u751F\u6210\u5668\u914D\u7F6E
 #source.root.package=src
 #webroot.package=WebRoot
 
@@ -7,11 +7,11 @@ source.root.package=/src.main.java/
 resources.root.package=/src.main.resources/
 webroot.package=/src.main.webapp/
 
-#\u9879\u76ee\u8def\u5f84
-default.path.name=D:\\Workspaces\\idea\\javaeebase-weixin
+#\u9879\u76EE\u8DEF\u5F84
+default.path.name=D:\\ideaspace\\javaeebase
 
-#\u9ed8\u8ba4\u751f\u6210\u7684\u5305\u540d
-default.package.name=cn.javaeebase.modules.weixin.mp
+#\u9ED8\u8BA4\u751F\u6210\u7684\u5305\u540D
+default.package.name=cn.javaeebase.modules
 
-#\u9ed8\u8ba4\u751f\u6210\u7684\u4f5c\u8005\u540d\u79f0
-default.function.author=¿ÓÀß≥¨
+#\u9ED8\u8BA4\u751F\u6210\u7684\u4F5C\u8005\u540D\u79F0
+default.function.author=\u674E\u5E05\u8D85
